# Healthcare_ML_Project

./: .gitignore
Deployment/: pyproject.toml  render.yaml  requirements.txt
Models/: best_healthcare_model.pkl
Source_Codes/: Database.py  Health_Care.py  Pipeline.py  Scheduler.py  Train_Model.py  api.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
