[project]
name = "internship"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.2",
    "psycopg[binary]>=3.3.3",
    "psycopg2>=2.9.11",
    "sqlalchemy>=2.0.49",
    "joblib>=1.5.3",
    "scikit-learn>=1.8.0",
    "xgboost>=3.2.0",
    "lightgbm>=4.6.0",
    "catboost>=1.2.10",
    "schedule>=1.2.2",
    "fastapi>=0.136.0",
    "pydantic>=2.13.2",
    "uvicorn>=0.44.0",
]
